examples/web-public/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: web-public
spec:
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      targetPort: http
